# s2

./: AndroidManifest.xml  build.gradle  settings.gradle
.github/workflows/: main.yml
ModMenuFF/app/java/com/dts/freefiremax/: NativeLib.java  OverlayService.java
ModMenuFF/app/src/: ESP.h  MemoryUtils.h  Menu.h  Utils.h
app/: CMakeLists.txt  build.gradle
app/dobby/include/: dobby.h
app/java/: AndroidManifest.xml
app/java/com/dts/freefiremax/: EspRenderer.java  MainActivity.java  NativeLib.java  OverlayService.java
app/src/: ESP.h  Global.h  InlineHook.h  Main.cpp  MemoryUtils.cpp  MemoryUtils.h  Menu.h  Utils.h
